   prior to opening a PdfPages object in batchQuantifyChrom.

24 July 2017
 - Added the peakDetectionMin setting to the settings window, including the possibility
   to save this parameter (thereby ensuring that the user does not have to edit the code
   of HappyTools).

24 August 2017
 - Added an option to zoom in on a specific region of the chromatogram using a new button
   in the GUI, that is labelled as "Define the X- and Y-axis limits".

1 September 2017
 - Added an option to overlay the quantitation windows onto a plotted chromatogram via the
   File -> Overlay Quantitation Windows button.
 - The quantitation overlay is added to the overal chromatogram during a batchProcess if the
   createFigure setting is set to True.

11 November 2017
 - Implemented a FWHM determination, that is included in the plots of each individual peak
   of the PDF files.
 - FWHM values will also be printed to the summary if the Peak Quality Criteria are selected
   in the Output Options of Batch Process.
 - Implemented a retention time residual, that is printed to the summary if the Peak Quality
   Criteria are selected in the Output Options of Batch Process.

16 November 2017
 - Implemented automatic integration window border determination using either sigma or FWHM.
 - Two new settings have been added to the settings window, namely 'Peak Detection Edge Method'
   and 'Sigma Value'. The first specifies if the border is the FWHM or based on a user
   specified Sigma value. The latter specifies what Sigma value should be used, if the first
   is set to Sigma.

24 November 2017
 - Fixed a bug that caused a peak to be shifted if there were more than 2 peaks overlapping.
   This was caused by the i['Peak'] value no longer being in the middle of i['Data'] after
   the border was changed. The fix was to always compare to relevant border of i['Data'] to
   i['Peak'] rather than the two opposite ends of i['Data'].
 - Applied the above mentioned fix on the generated peak list as well.